--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -31,7 +31,7 @@ body {
 
 .list-group-item.active{
    background-color: #0d6efd;
-   border-color: #0d6efd;
+   border-color: #1070ff;
 }
 
 /*СПИСОК писем*/
